--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Namdhinggo:wght@400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ruluko&display=swap');
 
-
 *{
     margin: 0;
     padding: 0;
@@ -15,19 +14,19 @@ body{
 .bg-bk, .dropdown-menu{
     background-color: #C14525 !important; 
 }
-a {
-    color: #F5ECD4  !important;
-}
 .border {
     border-bottom-left-radius: 10px; /* arrondi le coin inférieur gauche */
     border-bottom-right-radius: 10px; /* arrondi le coin inférieur droit */
     justify-content: center !important;
     width: 100vh;
-    
 }
-
+a :hover {
+    color: #0010A3;
+}
 /* Ajoutez ce CSS pour centrer les éléments */
 .navbar-nav {
     justify-content: center !important;
 }
-
+menu {
+    overline: none !important
+}
