--- a/style.css
+++ b/style.css
@@ -6,10 +6,14 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Source Serif 4", serif;
+    text-decoration: none ;
+    color: #F5ECD4;
 }
 body{
  background-image: url(assets\pictures\grenades.jpg);  
  font-family: "Ruluko", serif;
+ color: #F5ECD4;
+ 
 }
 .bg-bk, .dropdown-menu{
     background-color: #C14525 !important; 
@@ -27,6 +31,18 @@ a :hover {
 .navbar-nav {
     justify-content: center !important;
 }
-menu {
-    overline: none !important
+.background-image {
+    background-image: url('assets/pictures/grenade.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.bg-color-red {
+    background-color: #A30001;
+    opacity: 0.7;
+    width: 95%
+}
+.bg-color-orange {
+    background-color:#FFFFFF;
+    color :#A30001;
+    opacity: 0.10;
 }
