--- a/style.css
+++ b/style.css
@@ -1,19 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Namdhinggo:wght@400;500;600;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Ruluko&display=swap");
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Source Serif 4", serif;
-    text-decoration: none ;
-    color: #F5ECD4;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Source Serif 4", serif;
+  text-decoration: none;
+  color: #f5ecd4;
 }
-body{
- background-image: url("assets/pictures/grenades.jpg") !important;  
- font-family: "Ruluko", serif !important;
- color: #F5ECD4 !important;
- 
+body {
+  background-image: url("assets/pictures/grenades.jpg") !important;
+  font-family: "Ruluko", serif !important;
+  color: #f5ecd4 !important;
 }
 
 /* style bg */
@@ -54,7 +53,7 @@ body{
   color: #a30001 !important;
 }
 
-.text-blue{
+.text-blue {
   color: #0010a3;
 }
 
@@ -72,9 +71,9 @@ a :hover {
   justify-content: center !important;
 }
 .background-image {
-    background-image: url('assets/pictures/grenade.png');
-    background-size: cover;
-    background-repeat: no-repeat;
+  background-image: url("assets/pictures/grenade.png");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .bg-color-red {
     background-color: #A30001;
@@ -83,36 +82,42 @@ a :hover {
     border-radius: 10px 100px / 140px;
 }
 .bg-color-orange {
-    background-color:#FFFFFF;
-    color :#A30001;
-    opacity: 0.10;
-
+  background-color: #ffffff;
+  color: #a30001;
+  opacity: 0.1;
 }
 
-
-.front{
+.front {
   z-index: 2 !important;
   position: relative !important;
 }
 
-
 /* styles section juridique */
+/* section compétences */
 .rotate {
-  width: 150vw; 
-  height:40vw;
+  width: 160%;
+  height: fit-content;
   transform: rotate(10deg);
-  background-color: #f5f5dc; 
-  margin-left: -10%;
-  margin-top: 100px; 
-  padding: 20px; 
+  margin-left: -30%;
+  margin-top: 8%;
   box-sizing: border-box;
   z-index: -1;
 }
 
+.rotate-minus20 ul,
+.rotate-minus20 p {
+  font-size: 1.1em !important;
+  padding-right: 20vw !important;
+  padding-left: 10vw !important;
+}
+
 .rotate-minus20 {
-   /* position: absolute; */
-  transform: translateY(40%) rotate(-10deg) translateX(50%); 
- 
+  transform: rotate(-10deg);
+  height: fit-content;
+  padding-right: 20vw !important;
+  padding-left: 45vw !important;
+  padding-bottom: 5% !important;
+  padding-top: 10vw !important;
 }
 .logo {
   transform:rotate(30deg) ;
@@ -125,20 +130,62 @@ a :hover {
 
 .bubble {
   position: absolute; /* Position absolue pour placer les bulles */
-  height: 60vw; 
+  height: 60vh;
   z-index: 2 !important;
 }
 
 .left {
   left: 0; /* Pour placer la bulle à gauche */
-  top: 10%; 
-  transform: translateY(-175%) rotate(-70deg) translateX(-170%); 
+  top: 17%;
+  transform: translateY(-175%) rotate(-70deg) translateX(-190%);
 }
 
 .right {
   right: 0; /* Pour placer la bulle à droite */
-  top: 10%; 
-  transform: translateY(90%) rotate(-50deg) translateX(110%); 
+  top: 20%;
+  transform: translateY(90%) rotate(-50deg) translateX(135%);
+}
+
+/* responsive */
+
+/* Media queries pour les écrans de taille  */
+@media screen and (min-width: 681px) {
+  .bubble {
+    height: 60vw;
+  }
+  .left {
+    top: 15%;
+    transform: translateY(-175%) rotate(-70deg) translateX(-180%);
+  }
+  .right {
+    top: 35%;
+  }
+  .rotate-minus20 ul,
+  .rotate-minus20 p {
+    font-size: 1.3em !important;
+    padding-right: 10vw !important;
+    padding-left: 15vw !important;
+  }
+  .rotate-minus20 {
+    padding-right: 0% !important;
+    padding-left: 0% !important;
+    padding-top: 4% !important;
+  }
+}
+
+/* pour ecrans extra larges */
+@media screen and (min-width: 1451px) {
+  .rotate-minus20 ul,
+  .rotate-minus20 p {
+    font-size: 2em !important;
+    width: 80vw !important;
+  }
+  .rotate-minus20 {
+    padding-bottom: 5% !important;
+    padding-top: 5% !important;
+    margin: unset !important;
+    margin-left: 40vw !important;
+  }
 }
 .profil {
   transform: translateY(30%) translateX(-40%);
