--- a/style.css
+++ b/style.css
@@ -101,15 +101,15 @@ a :hover {
   background-repeat: no-repeat;
 }
 .bg-color-red {
-  background-color: #a30001;
-  opacity: 0.7;
-  width: 95%;
-  border-radius: 10px 100px / 140px;
+
+    background-color: rgb(163,	0, 0, 0.70);
+    width: 95%;
+    border-radius: 10px 100px / 140px 160px;
+
 }
 .bg-color-orange {
-  background-color: #ffffff;
-  color: #a30001;
-  opacity: 0.1;
+  background-color: rgb(255,255,255, 0.20);
+  border-radius: 30px 100px / 140px;
 }
 
 .front {
@@ -180,6 +180,7 @@ a :hover {
   transform: translateY(90%) rotate(-50deg) translateX(135%);
 }
 
+
 /* section honoraires */
 
 .rotate-10 {
@@ -216,6 +217,13 @@ a :hover {
 /* section contact */
 .profil {
   transform: translateY(30%) translateX(-40%);
+}
+
+.cardsRight {
+  right: 5; /* Pour placer la bulle à droite */
+  top: 20%;
+  transform: translateY(90%) rotate(-50deg) translateX(135%);
+
 }
 
 /* responsive */
@@ -279,4 +287,15 @@ a :hover {
 .right.formation{
   right: 0; /* Pour placer la bulle à droite */
   transform: rotate(-85deg) translateY(50%) translateX(150%);
+}
+
+.profil {
+  transform: translateY(30%) translateX(-40%);
+  
+}
+
+.custom-card {
+  border-radius: 0; /* Coins carrés */
+  box-shadow: 10px 10px 10px rgba(47, 2, 2, 0.1); /* Ombre */
+  background-color: #A30001; /* Couleur de fond */
 }
