--- a/admin/style.css
+++ b/admin/style.css
@@ -2,29 +2,38 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Source Serif 4", serif;
 }
 
 body{
       background: url('./assets/bg_error.svg');
       background-size: cover;
 }
+.background-image {
+  background-image: url("../assets/pictures/grenade.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 
+.nav-link.active{
+background-color: antiquewhite !important;
+}
 .bg-duck{
     background-color: #f5ecd4 !important;
    }
-
+.bg-wine{
+    background-color: #bb443c !important;
+  }
    .display-1{
     font-size: 10em !important;
     text-shadow: 1px 1px 13px #f5ecd4 ;
    }
 
-   h2{
+   /* h2{
     font-size: 3em !important;
     font-weight: 900 !important;
 color: #000000 !important;
 text-shadow: 1px 1px 13px #f5ecd4 ;
-   }
+   } */
 
 
 
