--- a/admin/style.css
+++ b/admin/style.css
@@ -14,8 +14,22 @@ body{
   background-repeat: no-repeat;
 }
 
+.bg-rouille{
+    
+    background-color:rgba(193, 68, 37, 0.443) !important;
+   }
+
+ .card-header{
+    background-color: #bb443c !important;
+   }
+
+
 .nav-link.active{
 background-color: antiquewhite !important;
+color:black !important;
+}
+.link-beige{
+    color: #f5ecd4 !important;
 }
 .bg-duck{
     background-color: #f5ecd4 !important;
@@ -23,10 +37,31 @@ background-color: antiquewhite !important;
 .bg-wine{
     background-color: #bb443c !important;
   }
+
+  
+.bg-light-50-beige {
+    background-color: #f4ead281 !important;
+  }
+  .bg-beige{
+    background-color: #f4ead2 !important;
+  }
    .display-1{
     font-size: 10em !important;
     text-shadow: 1px 1px 13px #f5ecd4 ;
    }
+/* 
+   nav .li{
+    color: #f5ecd4;
+   } */
+
+ 
+ 
+   .table   :not(caption) > * > * , .card
+ {
+
+        background-color:rgba(235, 206, 165, 0.443) !important;
+    }
+
 
    /* h2{
     font-size: 3em !important;
@@ -52,88 +87,12 @@ text-shadow: 1px 1px 13px #f5ecd4 ;
     font-size: 14px;
 }
 
-.modal-confirm .modal-header {
-    border-bottom: none;
-    position: relative;
+
+
+.add-form-content{
+    width: 300px !important;
 }
 
-.modal-confirm h4 {
-    text-align: center;
-    font-size: 26px;
-    margin: 30px 0 -10px;
-}
-
-.modal-confirm .close {
-    position: absolute;
-    top: -5px;
-    right: -2px;
-}
-
-.modal-confirm .modal-body {
-    color: #999;
-}
-
-.modal-confirm .modal-footer {
-    border: none;
-    text-align: center;
-    border-radius: 5px;
-    font-size: 13px;
-    padding: 10px 15px 25px;
-}
-
-.modal-confirm .modal-footer a {
-    color: #999;
-}
-
-.modal-confirm .icon-box {
-    width: 80px;
-    height: 80px;
-    margin: 0 auto;
-    border-radius: 50%;
-    z-index: 9;
-    text-align: center;
-    border: 3px solid #f15e5e;
-}
-
-.modal-confirm .icon-box i {
-    color: #f15e5e;
-    font-size: 46px;
-    display: inline-block;
-    margin-top: 13px;
-}
-
-.modal-confirm .btn,
-.modal-confirm .btn:active {
-    color: #fff;
-    border-radius: 4px;
-    background: #60c7c1;
-    text-decoration: none;
-    transition: all 0.4s;
-    line-height: normal;
-    min-width: 120px;
-    border: none;
-    min-height: 40px;
-    border-radius: 3px;
-    margin: 0 5px;
-}
-
-.modal-confirm .btn-secondary {
-    background: #c1c1c1;
-}
-
-.modal-confirm .btn-secondary:hover,
-.modal-confirm .btn-secondary:focus {
-    background: #a8a8a8;
-}
-
-.modal-confirm .btn-danger {
-    background: #f15e5e;
-}
-
-.modal-confirm .btn-danger:hover,
-.modal-confirm .btn-danger:focus {
-    background: #ee3535;
-}
 
 .trigger-btn {
     display: inline-block;
